public class EnfermeraNoEncontradaException extends Exception
{
    public EnfermeraNoEncontradaException(String mensaje)
    {
        super(mensaje);
    }
}
